--- a/QuanLyCuaHangDienMay/QuanLyCuaHangDienMay/Properties/Settings.settings
+++ b/QuanLyCuaHangDienMay/QuanLyCuaHangDienMay/Properties/Settings.settings
@@ -2,9 +2,6 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="QuanLyCuaHangDienMay.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="QB_QL_CUA_HANG_DIEN_MAYConnectionString1" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Data Source=LAPTOP-S7AU503Q\SQLEXPRESS;Initial Catalog=QB_QL_CUA_HANG_DIEN_MAY;Integrated Security=True</Value>
-    </Setting>
     <Setting Name="user" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -14,10 +11,10 @@
     <Setting Name="QB_QL_CUA_HANG_DIEN_MAYConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=LAPTOP-S7AU503Q\SQLEXPRESS;Initial Catalog=QB_QL_CUA_HANG_DIEN_MAY;User ID=sa;Password=haiquan32&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=ADMIN\SQLEXPRESS2012;Initial Catalog=QB_QL_CUA_HANG_DIEN_MAY;User ID=sa&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=LAPTOP-S7AU503Q\SQLEXPRESS;Initial Catalog=QB_QL_CUA_HANG_DIEN_MAY;User ID=sa;Password=haiquan32</Value>
+      <Value Profile="(Default)">Data Source=ADMIN\SQLEXPRESS2012;Initial Catalog=QB_QL_CUA_HANG_DIEN_MAY;User ID=sa</Value>
     </Setting>
   </Settings>
 </SettingsFile>
